js/src/tests/test262/built-ins/Error/S15.11.3_A2_T1.js
var
err1
=
Error
(
"
err
"
)
;
if
(
err1
.
constructor
.
length
!
=
=
1
)
{
ERROR
(
'
#
1
:
var
err1
=
Error
(
"
err
"
)
;
err1
.
constructor
.
length
=
=
=
1
.
Actual
:
'
+
err1
.
constructor
.
length
)
;
}
if
(
Error
.
constructor
.
length
!
=
=
1
)
{
ERROR
(
'
#
2
:
Error
.
constructor
.
length
=
=
=
1
.
Actual
:
'
+
Error
.
constructor
.
length
)
;
}
reportCompare
(
0
0
)
;
